# krims

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  AUTORS.md  CMakeLists.txt  CodingConventions.md  Doxyfile  README.md
cmake/: IncludeKrimsCmakeModule.cmake  findCatch.cmake  findRapidcheck.cmake  install_modules_and_packages.cmake  install_package.cmake  krimsConfig.cmake.in  setup_dependencies.cmake  setup_optional.cmake
cmake/modules/: CppInterface.cmake  DataFiles.cmake  DebugReleaseBuild.cmake  Documentation.cmake  FindPackageAutocheckoutFallback.cmake  GlobalOption.cmake  ProjectFeatures.cmake  ScalarTypes.cmake  SetupClangTargets.cmake  WriteVersionHeader.cmake
cmake/modules/DebugReleaseBuild/: drb_init.cmake  drb_setup_compiler_flags.cmake  drb_targets.cmake  drb_utils.cmake
cmake/modules/DebugReleaseBuild/compiler_flags/: coverage.cmake  sanitise.cmake  standard.cmake
cmake/modules/DebugReleaseBuild/compilers/: standard.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/Binary128Read/: CMakeLists.txt  main.cc
examples/ExceptionSystem_demo/: CMakeLists.txt  main.cc
examples/GenMap_demo/: CMakeLists.txt  main.cc
examples/ParameterMap_demo/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/krims/: Algorithm.hh  CMakeLists.txt  CircularBuffer.hh  DataFiles.hh  ExceptionSystem.hh  FileSystem.hh  FileUtils.hh  Functionals.hh  GenMap.cc  GenMap.hh  GenMapAccessor.hh  GenMapIterator.hh  IteratorUtils.hh  NumComp.hh  ParameterMap.cc  ParameterMap.hh  PointerWrapper.hh  RCPWrapper.hh  Range.hh  Subscribable.hh  SubscriptionPointer.hh  TupleUtils.hh  TypeUtils.hh  argsort.hh  config.hh.in  demangle.cc  demangle.hh  exceptions.hh  make_unique.hh  version.cc  version.hh
src/krims/Algorithm/: argsort.hh  join.hh  split.hh
src/krims/DataFiles/: FindDataFile.cc  FindDataFile.hh  FloatingPointType.cc  FloatingPointType.hh  ieee_convert.cc  ieee_convert.hh  read_binary.cc  read_binary.hh  write_binary.hh
src/krims/ExceptionSystem/: Backtrace.cc  Backtrace.hh  ExceptionBase.cc  ExceptionBase.hh  ExceptionSystem.cc  ExceptionSystem.hh  ExceptionVerbosity.hh  Exceptions.hh  addr2line.cc  addr2line.hh  backtrace.cc  backtrace.hh  exception_defs.cc  exception_defs.hh  exception_helper_functions.hh  exception_helper_macros.hh  terminate_handler.cc  terminate_handler.hh
src/krims/FileSystem/: basename.cc  basename.hh  dirname.cc  dirname.hh  path_exists.cc  path_exists.hh  realpath.cc  realpath.hh  splitext.cc  splitext.hh
src/krims/FileUtils/: FindDataFile.cc  FindDataFile.hh  read_binary.hh  write_binary.hh
src/krims/IteratorUtils/: CircularIterator.hh  DereferenceIterator.hh
src/krims/NumComp/: NumComp.hh  NumCompConstants.cc  NumCompConstants.hh  NumCompConstantsChangeSafe.hh  NumCompException.cc  NumCompException.hh  NumEqual.hh  numcomp_tolerance_value.hh  numerical_error.hh
src/krims/TupleUtils/: apply.hh  tuple_for_each.hh  tuple_for_first.hh  tuple_map.hh
src/krims/TypeUtils/: CheaplyCopyable_i.hh  EnableIfLibrary.hh  IsCheaplyCopyable.hh  IsComplexNumber.hh  IsStreamInsertable.hh  IsSubscribable.hh  RealTypeOf.hh  UsingLibrary.hh  VoidType.hh
src/krims/detail/: GenMapTraits.hh  GenMapValue.hh
src/krims/exceptions/: ExceptionBase.cc  ExceptionBase.hh  Exceptions.hh  exception_defs.cc  exception_defs.hh  exception_helper_functions.hh
src/krims/macros/: deprecated.hh  noinline.hh
templates/: py.template  tmpl_settings.vim
tests/: BacktraceTests.cc  BinaryReadWriteTests.cc  CMakeLists.txt  CircularBufferTests.cc  CircularIteratorTests.cc  DereferenceIteratorTests.cc  DummyTest.cc  ExceptionTests.cc  FileSystemTests.cc  GenMapTests.cc  NumCompTests.cc  ParameterMapTests.cc  RCPWrapperTests.cc  RangeTests.cc  SubscriptionTests.cc  TupleUtilsTests.cc  TypeUtilsTests.cc  argsortTests.cc  joinTests.cc  main.cc  splitTests.cc
